--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,8 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: row;
-    margin-bottom: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     padding-bottom: 10px;
     border-bottom: 2px solid rgba(255, 107, 107, 0.2);
     width: 100%;
@@ -65,6 +66,7 @@ body {
     max-height: 50vh;
     height: auto;
     margin-top: 10px;
+    margin-bottom: 10px;
     border-radius: 20px;
     object-fit: contain;
 }
