--- a/styles.css
+++ b/styles.css
@@ -54,11 +54,11 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: row;
-    margin-top: 20px;
+    margin-top: 25px;
     margin-bottom: 20px;
-    padding-bottom: 10px;
+    padding: 0 30px 10px;
     border-bottom: 2px solid rgba(255, 107, 107, 0.2);
-    width: 100%;
+    width: calc(100% - 60px);
 }
 
 #image {
@@ -66,7 +66,7 @@ body {
     max-height: 50vh;
     height: auto;
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 25px;
     border-radius: 20px;
     object-fit: contain;
 }
